syntax = "proto3";

package common;

option go_package = "github.com/RosettaFlow/Carrier-Go/lib/common";

// A represents the basic information of the organization.
message Organization  {
  // org name
  string name = 1;
  // the node_id for org
  string node_id = 2;
  // the identity for org
  string identity_id = 3;
}

// 任务下的组织信息
message TaskOrganization  {
  string party_id = 1;
  // org name
  string name = 2;
  // the node_id for org
  string node_id = 3;
  // the identity for org
  string identity_id = 4;
}

message EmptyGetParams {}

message SimpleResponse {
  // the code for response
  int32  status = 1;
  // the message for response
  string msg = 2;
}

enum UserType {
  Unknown = 0;
  ETH = 1;
  ATP = 2;
  LAT = 3;
}
